# Minesweeper

./: .gitignore  CMakeLists.txt  GUI.c  GUI.h  Makefile  _Makefile  args.c  args.h  field.txt  field_10x10_1.txt  filehandler.c  filehandler.h  game  game.c  main.c  main.h  map.c  map.h  screenhandler.c
src/: GUI.c  GUI.h  args.c  filehandler.c  filehandler.h  files.c  main.c  map.c  map.h  utils.c  utils.h
